# mlperf-openvino-benchmark

./: .gitignore  README.md  build_cpp.sh  debug_retinanet.py  diagnose_retinanet.py  pyproject.toml  test_retinanet_accuracy.py
configs/: benchmark_config.yaml
scripts/: convert_retinanet_to_onnx.py  download_sdxl_dataset.py  download_sdxl_model.py  sdxl_benchmark_compare.py  sdxl_genai_infer.py  sdxl_multi_die_infer.py
scripts/whisper_npu_tests/: 00_prepare_model.py  01_check_npu_devices.py  02_check_optimum_npu.py  03_test_manual_encoder_decoder.py  04_test_multi_die.py  05_full_whisper_benchmark.py  README.md
src/mlperf_openvino/: __init__.py  cli.py
src/mlperf_openvino/backends/: __init__.py  base.py  device_discovery.py  multi_device_backend.py  openvino_backend.py
src/mlperf_openvino/core/: __init__.py  benchmark_runner.py  bert_multi_die_sut.py  bert_optimized_sut.py  bert_sut.py  config.py  cpp_sut_wrapper.py  image_multi_die_sut_base.py  llama_multi_die_sut.py  llama_sut.py  multi_device_sut.py  multi_die_cpp_sut_wrapper.py  resnet_multi_device_sut.py  resnet_multi_die_sut.py  resnet_sut.py  retinanet_multi_die_sut.py  retinanet_sut.py  sdxl_multi_die_sut.py  sdxl_sut.py  ssd_resnet34_multi_die_sut.py  ssd_resnet34_sut.py  sut.py  sut_factory.py  unet3d_multi_die_sut.py  unet3d_sut.py  whisper_multi_die_sut.py  whisper_sut.py
src/mlperf_openvino/cpp/: CMakeLists.txt  README.md  __init__.py  bert_multi_die_sut.cpp  bert_multi_die_sut.hpp  bert_multi_die_sut_cpp.cpp  bert_multi_die_sut_cpp.hpp  bert_multi_die_sut_optimized.cpp  bert_multi_die_sut_optimized.hpp  bert_sut_cpp.cpp  bert_sut_cpp.hpp  bindings.cpp  multi_die_sut_cpp.cpp  multi_die_sut_cpp.hpp  offline_sut.cpp  offline_sut.hpp  resnet_multi_die_sut_cpp.cpp  resnet_multi_die_sut_cpp.hpp  resnet_sut_cpp.cpp  resnet_sut_cpp.hpp  retinanet_multi_die_sut_cpp.cpp  retinanet_multi_die_sut_cpp.hpp  retinanet_sut_cpp.cpp  retinanet_sut_cpp.hpp  setup_cpp.py  ssd_resnet34_multi_die_sut_cpp.cpp  ssd_resnet34_multi_die_sut_cpp.hpp  ssd_resnet34_sut_cpp.cpp  ssd_resnet34_sut_cpp.hpp  sut_cpp.cpp  sut_cpp.hpp  unet3d_multi_die_sut_cpp.cpp  unet3d_multi_die_sut_cpp.hpp  whisper_sut_cpp.cpp  whisper_sut_cpp.hpp
src/mlperf_openvino/datasets/: __init__.py  base.py  cnn_dailymail.py  coco.py  coco_captions.py  coco_eval.py  coco_prompts.py  imagenet.py  kits19.py  librispeech.py  open_orca.py  openimages.py  sdxl_metrics.py  squad.py
src/mlperf_openvino/utils/: __init__.py  dataset_downloader.py  model_downloader.py
tests/: conftest.py  test_backend.py  test_config.py  test_dataset.py  test_new_models.py  test_whisper.py
tools/convert_decoder_static/: CMakeLists.txt  main.cpp
