[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlperf-openvino-benchmark"
version = "1.0.0"
description = "MLPerf v5.1 compatible inference benchmark using OpenVINO backend"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openvino>=2024.0.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "onnx>=1.14.0",
    "mlcommons-loadgen>=4.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
resnet = [
    "torchvision>=0.15.0",
]
bert = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
]
retinanet = [
    "pycocotools>=2.0.0",  # For mAP calculation
    "fiftyone>=0.23.0",  # Optional: for OpenImages download
]
whisper = [
    "transformers>=4.30.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "jiwer>=3.0.0",  # For Word Accuracy calculation
    "optimum[openvino]>=1.16.0",  # For OpenVINO export
]
sdxl = [
    "optimum[openvino]>=1.16.0",  # For OVStableDiffusionXLPipeline
    "diffusers>=0.25.0",  # For SDXL pipeline
    "transformers>=4.30.0",  # For CLIP tokenizer
    "torch>=2.0.0",  # For tensor operations
    "torchvision>=0.15.0",  # For InceptionV3 (FID)
    "open_clip_torch>=2.20.0",  # For CLIP score (MLCommons)
    "scipy>=1.10.0",  # For FID computation (linalg.sqrtm)
]
all = [
    "mlperf-openvino-benchmark[dev,resnet,bert,retinanet,whisper,sdxl]",
]

[project.scripts]
mlperf-ov = "mlperf_openvino.cli:main"

[project.urls]
Homepage = "https://github.com/egorshul/mlperf-openvino-benchmark"
Documentation = "https://github.com/egorshul/mlperf-openvino-benchmark#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
