[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlperf-openvino-benchmark"
version = "1.0.0"
description = "MLPerf Inference benchmark using OpenVINO backend"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openvino>=2024.0.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "mlcommons-loadgen>=4.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
resnet = [
    "torchvision>=0.15.0",
]
bert = [
    "transformers>=4.30.0",
]
retinanet = [
    "pycocotools>=2.0.0",
]
whisper = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "jiwer>=3.0.0",
    "optimum[openvino]>=1.16.0",
]
ssd-resnet34 = [
    "pycocotools>=2.0.0",
    "opencv-python>=4.5.0",
]
sdxl = [
    "optimum[openvino]>=1.16.0",
    "diffusers>=0.25.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-fid>=0.3.0",
    "open_clip_torch>=2.20.0",
    "scipy>=1.10.0",
]
llama = [
    "optimum[openvino]>=1.16.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "rouge-score>=0.1.2",
    "nncf>=2.7.0",
]
all = [
    "mlperf-openvino-benchmark[dev,resnet,bert,retinanet,ssd-resnet34,whisper,sdxl,llama]",
]

[project.scripts]
mlperf-ov = "mlperf_openvino.cli:main"

[project.urls]
Homepage = "https://github.com/egorshul/mlperf-openvino-benchmark"
Documentation = "https://github.com/egorshul/mlperf-openvino-benchmark#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
