[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlperf-openvino-benchmark"
version = "1.0.0"
description = "MLPerf Inference benchmark using OpenVINO backend"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "mlcommons-loadgen>=4.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    # openvino, openvino-genai and openvino-tokenizers are provided
    # externally via LD_LIBRARY_PATH / PYTHONPATH and must NOT be
    # listed here — pip would pull incompatible versions from PyPI.
    "nncf>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
resnet = []
bert = [
    "transformers>=4.30.0,<=4.51.3",
]
retinanet = [
    "pycocotools>=2.0.0",
]
whisper = [
    "transformers>=4.36.0,<=4.51.3",  # aligned with openvino-tokenizers 2025.2
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "jiwer>=3.0.0",
    "optimum-intel>=1.16.0,<=1.23.1",  # >=1.24 requires openvino>=2025.4
]
ssd-resnet34 = [
    "pycocotools>=2.0.0",
    "opencv-python>=4.5.0",
]
sdxl = [
    "optimum-intel>=1.16.0,<=1.23.1",  # >=1.24 requires openvino>=2025.4
    "diffusers>=0.25.0",
    "transformers>=4.30.0,<=4.51.3",
    "pytorch-fid>=0.3.0",
    "open_clip_torch>=2.20.0",
    "scipy>=1.10.0",
]
llama = [
    "transformers>=4.40.0,<=4.51.3",
    "datasets>=2.14.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
]
all = [
    "mlperf-openvino-benchmark[dev,resnet,bert,retinanet,ssd-resnet34,whisper,sdxl,llama]",
]

[project.scripts]
mlperf-ov = "mlperf_openvino.cli:main"

[project.urls]
Homepage = "https://github.com/egorshul/mlperf-openvino-benchmark"
Documentation = "https://github.com/egorshul/mlperf-openvino-benchmark#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
